# SDC-NNIE-tutorial

./: README.md
Part_1/: main.cpp
Part_1/include/: common.hpp  sdc.hpp
Part_2/: CMakeLists.txt
Part_2/include/: common.hpp  sdc.hpp  video_service.hpp
Part_2/src/: algorithm_service.cpp  array_queue.cpp  main.cpp  utils_service.cpp  video_service.cpp
Part_3/: CMakeLists.txt
Part_3/include/: SSDModel.hpp  algorithm_service.hpp  array_queue.hpp  common.hpp  event_service.hpp  label_event.h  sdc.hpp  utils_service.hpp  video_service.hpp
Part_3/src/: SSDModel.cpp  algorithm_service.cpp  array_queue.cpp  event_service.cpp  img_save.cpp  img_save.hpp  main.cpp  utils_service.cpp  video_service.cpp
algorithm/: CMakeLists.txt
algorithm/include/: algorithm_service.hpp  common.hpp  sdc.hpp  utils_service.hpp  video_service.hpp
algorithm/src/: algorithm_service.cpp  array_queue.cpp  chapter2_main.cpp  main.cpp  video_service.cpp
video/: CMakeLists.txt  main.cpp
